The Desktop VIew Has Been Fixed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 </section>
 <section class="section section--third">
   <div class="container third--container">
+    <div class="image">
   <img src="images/illustration-stay-productive.png" alt="">
+</div>
+  <div class="col">
   <h2 class="title third--title">Stay productive, wherever you are</h2>
   <p class="text third--text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
     storage needs.
@@ -75,6 +78,7 @@
   attachments required.
 </p>
   <a href="" class="text third--link">See how Fylo works</a>
+  </div>
 </div>
 </section>
 <section class="section--fourth">
@@ -122,8 +126,8 @@
   </div>
 </section>
 <section class="section section--footer">
-  <div class="container">
   <img src="images/logo.svg" alt="">
+  <div class="container footer-container">
   <div class="img--text">
   <div class="icons">
   <img src="images/icon-location.svg" alt="">
@@ -132,6 +136,7 @@
   <p class="txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
   dolore magna aliqua</p>
   </div>
+  <div class="column">
   <div class="img--text">
     <div class="icons">
   <img src="images/icon-phone.svg" alt="">
@@ -144,6 +149,7 @@
 </div>
   <p class="txt">example@fylo.com</p>
   </div>
+</div>
   <ul class="footer--list">
     <li class="text footer--item"> About Us</li>
     <li class="text footer--item">Jobs</li>
